src/test/ui/consts/const-eval/feature-gate-const_fn_union.stderr
error[E0658]: unions in const fn are unstable
<<<<<<< HEAD   (086005 Importing rustc-1.38.0)
  --> $DIR/feature-gate-const_fn_union.rs:11:5
=======
  --> $DIR/feature-gate-const_fn_union.rs:12:5
>>>>>>> BRANCH (8cd2c9 Importing rustc-1.39.0)
   |
LL |     Foo { u }.i
   |     ^^^^^^^^^^^
   |
   = note: for more information, see https://github.com/rust-lang/rust/issues/51909
   = help: add `#![feature(const_fn_union)]` to the crate attributes to enable

error: aborting due to previous error

For more information about this error, try `rustc --explain E0658`.
